# hc-csci324-rust

./: Cargo.toml  PARSER.md  PRECEDENCE.md  PRESENTATION.md  README.md  SYNTAX.md  TEST_CASES.txt  main.rs
hangman/: Cargo.toml
hangman/src/: dict_ops.rs  testdict.txt
parser/: Cargo.toml
parser/src/: logic.rs  main.rs  tokenizer.rs
src/: dict_ops.rs  main.rs  testdict.txt
